# hyperlight

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  MAINTAINERS.md  README.md  c.just  flake.nix  rust-toolchain.toml  typos.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CargoAudit.yml  CargoPublish.yml  Coverage.yml  CreateDevcontainerImage.yml  CreateRelease.yml  CreateReleaseBranch.yml  DailyBenchmarks.yml  Fuzzing.yml  IssueLabelChecker.yml  PRLabelChecker.yml  PrimeCaches.yml  ReleaseBlockerCheck.yml  ReleaseBlockerLabelCleanUp.yml  RustNightly.yml  ValidatePullRequest.yml  auto-merge-dependabot.yml  copilot-setup-steps.yml  dep_benchmarks.yml  dep_build_guests.yml  dep_build_test.yml  dep_code_checks.yml  dep_fuzzing.yml  dep_run_examples.yml  dep_update_guest_locks.yml
.paw/work/user-data-region/: CodeResearch.md  Docs.md  ImplementationPlan.md  Spec.md  WorkflowContext.md
dev/: check-license-headers.sh
docs/: README.md  getting-started.md  how-to-build-a-hyperlight-guest-binary.md  hyperlight-execution-details.md  hyperlight-metrics-logs-and-traces.md
hack/: update-actions.sh
src/hyperlight_common/: Cargo.toml
src/hyperlight_common/src/: lib.rs  mem.rs
src/hyperlight_common/src/arch/aarch64/: layout.rs
src/hyperlight_common/src/arch/amd64/: layout.rs
src/hyperlight_common/src/arch/i686/: layout.rs
src/hyperlight_common/src/virtq/: access.rs  desc.rs  event.rs  mod.rs  ring.rs
src/hyperlight_component_macro/: Cargo.toml
src/hyperlight_component_util/: Cargo.toml
src/hyperlight_component_util/src/: component.rs  elaborate.rs
src/hyperlight_guest/src/guest_handle/: host_comm.rs
src/hyperlight_guest_bin/: Cargo.toml
src/hyperlight_guest_bin/src/: host_comm.rs  lib.rs
src/hyperlight_guest_capi/: Cargo.toml
src/hyperlight_guest_capi/src/: dispatch.rs  user_data.rs
src/hyperlight_guest_tracing/: Cargo.toml
src/hyperlight_host/: Cargo.toml
src/hyperlight_host/examples/guest-debugging/: main.rs
src/hyperlight_host/src/: error.rs  lib.rs
src/hyperlight_host/src/func/: call_ctx.rs  host_functions.rs
src/hyperlight_host/src/hypervisor/gdb/: arch.rs  event_loop.rs  mod.rs
src/hyperlight_host/src/hypervisor/hyperlight_vm/: mod.rs  x86_64.rs
src/hyperlight_host/src/hypervisor/virtual_machine/mshv/: x86_64.rs
src/hyperlight_host/src/mem/: layout.rs  memory_region.rs  mgr.rs  shared_mem.rs
src/hyperlight_host/src/sandbox/: config.rs  host_funcs.rs  initialized_multi_use.rs  mem_mgr.rs  outb.rs  uninitialized.rs  uninitialized_evolve.rs
src/hyperlight_host/src/sandbox/snapshot/: mod.rs
src/hyperlight_host/tests/: integration_test.rs  sandbox_host_tests.rs
src/hyperlight_libc/: Cargo.toml  build_files.rs
src/tests/c_guests/c_simpleguest/: main.c
src/tests/rust_guests/: Cargo.toml
src/tests/rust_guests/dummyguest/: Cargo.toml
src/tests/rust_guests/simpleguest/: Cargo.toml
src/tests/rust_guests/simpleguest/src/: main.rs
src/tests/rust_guests/witguest/: Cargo.toml
src/trace_dump/: Cargo.toml
