[package]
name = "trace_dump"
version = "0.10.0"
publish = false
edition = "2021"
rust-version = "1.92"

[dependencies]
addr2line = "0.26.1"
# Fixes #1490 through #1495 by using upstream piet commit 618083f,
# which replaces the unmaintained unic-bidi dependency with icu_properties.
piet-common = { git = "https://github.com/linebender/piet", rev = "618083f8a6671c7ab8c198724487348d2ccf9a8f", features = [ "png" ] }
blake3 = { version = "1.8.5" }

[[bin]]
name = "trace_dump"
path = "main.rs"
