[package]
name = "dummyguest"
version = "0.10.0"
edition = "2021"


[dependencies]
hyperlight-guest-bin = { path = "../../../hyperlight_guest_bin", default-features = false }
hyperlight-common = { path = "../../../hyperlight_common", default-features = false }

[features]
default = []
trace_guest = ["hyperlight-guest-bin/trace_guest"]
mem_profile = ["hyperlight-common/mem_profile", "hyperlight-guest-bin/mem_profile"]
